--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,101 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+:root {
+	--primary: #03C0A7;
+	--secondary: #f7fafc;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.banner {
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: 0;
+    left: 0;
+	background: var(--primary);
+	z-index: 10;
+}
+
+.content {
+	background: rgb(255, 255, 255);
+	position: absolute;
+	top: -200px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 980px;
+	height: 500px;
+	margin: auto;
+	padding: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;	
+	align-items: center;
+	z-index: 100;
+}
+
+.container {
+	background: black;
+    width: 100vw;
+	height: 100vh;
+    padding: 20px;
+    margin: 0 auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form-input {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.input-group-h {
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.input-group-m {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    width: 450px;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.code-digit {
+    width: calc(80% / 6);
+    text-justify: center;
+    text-align: center;
+    -moz-appearance: textfield;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
 }
